@@ -1,3 +1,8 @@
+2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-util.c (set_moniker_cb): Put up error dialog if we could
+	not resolve the configuration moniker
+
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
 	* RELEASE : 1.5.0
